Largeur des banniéres plus grande, correction placement des étoiles en mobile et des collapses en desktop

--- a/my-react-app/src/styles/Pages/_HousingDetail.scss
+++ b/my-react-app/src/styles/Pages/_HousingDetail.scss
@@ -14,7 +14,7 @@
 /* 📌 Carrousel */
 .slideshow {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1700px;
   height: 450px;
   margin: 0 auto;
   border-radius: 10px;
@@ -31,7 +31,7 @@
 
 /* 📌 Infos logement */
 .housing-info {
-  padding-left: 165px;
+  padding-left: 89px;
   margin-top: -80px;
 }
 
@@ -71,7 +71,7 @@
   justify-content: space-between;
   gap: 10px;
   max-width: 200px;
-  padding-right: 160px;
+  padding-right: 89px;
   margin-top: -70px;
 }
 
@@ -79,10 +79,18 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  color: #ff6060;
   font-weight: 500;
   font-size: 18px;
   text-align: right;
+}
+
+.owner-info p {
+  color: #ff6060 !important; /* Assure que la couleur soit identique aux collapses */
+  font-weight: 500;
+  font-size: 18px;
+  white-space: normal; /* Permet un retour à la ligne */
+  word-wrap: break-word; /* Force la coupure si nécessaire */
+  max-width: 100px; /* ✅ Ajuste la largeur pour forcer un retour à la ligne */
 }
 
 .owner-info img {
@@ -112,11 +120,11 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 20px;
+  gap: 45px;
   margin-top: 30px;
-  width: 90%;
+  width: 92%;
   margin: auto;
-  padding: 0 20px 0 20px;
+  padding: 0 0px 0 20px;
 }
 
 .housing-detail-collapses .collapse {
@@ -159,7 +167,7 @@
 }
 
 /* ✅ Responsive MOBILE */
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   .slideshow {
     height: 250px;
   }
@@ -199,6 +207,7 @@
 
   /* ✅ Taille des étoiles réduite */
   .rating {
+    margin-left: -22px;
     order: 1;
     justify-content: flex-start;
     flex: 1;
@@ -233,7 +242,7 @@
     gap: 10px;
     width: 100%;
     max-width: 90%;
-    margin-left: auto;
+    margin-left: -5px;
     margin-right: auto;
     margin-top: -10px;
     margin-bottom: 50px;
