--- a/my-react-app/src/styles/components/_Banner.scss
+++ b/my-react-app/src/styles/components/_Banner.scss
@@ -3,7 +3,7 @@
 .banner {
   position: relative;
   width: 100%;
-  max-width: 1550px;
+  max-width: 1706px;
   height: 350px !important;
   display: flex;
   align-items: center;
