--- a/my-react-app/src/styles/components/_variables.scss
+++ b/my-react-app/src/styles/components/_variables.scss
@@ -4,7 +4,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-$breakpoint-mobile: 768px;
+$breakpoint-mobile: 480px;
 $breakpoint-tablet: 1024px;
 
 // Définir les variables globales
